--- a/CAPUBBS TodayExtension/Base.lproj/MainInterface.storyboard
+++ b/CAPUBBS TodayExtension/Base.lproj/MainInterface.storyboard
@@ -14,17 +14,86 @@
                         <viewControllerLayoutGuide type="top" id="Ft6-oW-KC0"/>
                         <viewControllerLayoutGuide type="bottom" id="FKl-LY-JtV"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" simulatedAppContext="notificationCenter" id="S3S-Oj-5AN">
+                    <view key="view" contentMode="scaleToFill" simulatedAppContext="notificationCenter" id="S3S-Oj-5AN" customClass="AsyncImageView">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="g5g-QO-P5K" customClass="AsyncImageView">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="35" id="Nmk-An-OCm"/>
+                                    <constraint firstAttribute="height" constant="35" id="iJA-ia-2Jd"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CAPU" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CSA-Dq-M9k">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="wxa-zN-uMr">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="GpV-CQ-7xq"/>
+                                </constraints>
+                            </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xe4-7z-w5y">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="1v8-06-cLS"/>
+                                    <constraint firstAttribute="width" constant="45" id="VNW-0A-QKv"/>
+                                </constraints>
+                                <inset key="contentEdgeInsets" minX="4" minY="0.0" maxX="4" maxY="0.0"/>
+                                <state key="normal" title="更多">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="showMore:" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="arB-dS-7Lq"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xud-YF-Dyu">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="CBu-wF-yUA"/>
+                                </constraints>
+                                <inset key="contentEdgeInsets" minX="4" minY="0.0" maxX="4" maxY="0.0"/>
+                                <state key="normal" title="您暂时没有新消息">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="showMessage:" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="9q9-dm-1Bj"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="Xud-YF-Dyu" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="wxa-zN-uMr" secondAttribute="trailing" constant="8" id="ESp-dh-CQq"/>
+                            <constraint firstItem="Xud-YF-Dyu" firstAttribute="centerY" secondItem="g5g-QO-P5K" secondAttribute="centerY" id="FWK-VN-ch0"/>
+                            <constraint firstItem="CSA-Dq-M9k" firstAttribute="leading" secondItem="g5g-QO-P5K" secondAttribute="trailing" constant="8" id="Pdj-QC-Dud"/>
+                            <constraint firstItem="wxa-zN-uMr" firstAttribute="leading" secondItem="CSA-Dq-M9k" secondAttribute="trailing" constant="8" id="QUb-Sf-TG0"/>
+                            <constraint firstItem="CSA-Dq-M9k" firstAttribute="centerY" secondItem="g5g-QO-P5K" secondAttribute="centerY" id="Qem-oV-aKo"/>
+                            <constraint firstAttribute="trailing" secondItem="Xe4-7z-w5y" secondAttribute="trailing" constant="8" id="Qrk-Gx-g6r"/>
+                            <constraint firstItem="g5g-QO-P5K" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" constant="15" id="ZPD-3s-Jnk"/>
+                            <constraint firstItem="Xe4-7z-w5y" firstAttribute="leading" secondItem="Xud-YF-Dyu" secondAttribute="trailing" id="baN-I0-5lw"/>
+                            <constraint firstItem="g5g-QO-P5K" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="8" id="huK-S5-fp0"/>
+                            <constraint firstItem="wxa-zN-uMr" firstAttribute="centerY" secondItem="g5g-QO-P5K" secondAttribute="centerY" id="koA-Kp-zEg"/>
+                            <constraint firstItem="Xe4-7z-w5y" firstAttribute="centerY" secondItem="g5g-QO-P5K" secondAttribute="centerY" id="ujt-HN-kxi"/>
+                        </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <nil key="simulatedStatusBarMetrics"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="buttonMessages" destination="Xud-YF-Dyu" id="uo6-CA-rSW"/>
+                        <outlet property="buttonMore" destination="Xe4-7z-w5y" id="A4e-cx-gi3"/>
+                        <outlet property="constraintIndicatorWidth" destination="GpV-CQ-7xq" id="Hap-yY-VPE"/>
+                        <outlet property="constraintMoreButtonWidth" destination="VNW-0A-QKv" id="vOk-yE-GNJ"/>
+                        <outlet property="imageIcon" destination="g5g-QO-P5K" id="ulK-Mx-YJn"/>
+                        <outlet property="indicatorLoading" destination="wxa-zN-uMr" id="GRT-f8-X6v"/>
+                        <outlet property="labelName" destination="CSA-Dq-M9k" id="Ys5-5e-PvE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vXp-U4-Rya" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="108.39580209895054"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="placeholder" width="35" height="35"/>
+    </resources>
 </document>
