--- a/CAPUBBS TodayExtension/Base.lproj/MainInterface.storyboard
+++ b/CAPUBBS TodayExtension/Base.lproj/MainInterface.storyboard
@@ -61,10 +61,10 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="hot" id="sfB-p9-4bG" customClass="TodayTableViewCell">
-                                        <rect key="frame" x="0.0" y="28" width="360" height="33"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="33"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sfB-p9-4bG" id="Q4D-DO-Nys">
-                                            <frame key="frameInset" width="327" height="32.5"/>
+                                            <frame key="frameInset" width="342" height="32"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="标题" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="niV-7C-1bD">
@@ -82,10 +82,11 @@
                                                 <constraint firstItem="niV-7C-1bD" firstAttribute="centerY" secondItem="Q4D-DO-Nys" secondAttribute="centerY" id="Luj-ZD-jgQ"/>
                                                 <constraint firstItem="PcY-O1-CfA" firstAttribute="centerY" secondItem="Q4D-DO-Nys" secondAttribute="centerY" id="Ygt-Mo-9W8"/>
                                                 <constraint firstItem="PcY-O1-CfA" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="niV-7C-1bD" secondAttribute="trailing" constant="8" id="cKN-T0-qyC"/>
-                                                <constraint firstAttribute="leadingMargin" secondItem="niV-7C-1bD" secondAttribute="leading" id="iMs-bT-qzi"/>
+                                                <constraint firstItem="niV-7C-1bD" firstAttribute="leading" secondItem="Q4D-DO-Nys" secondAttribute="leadingMargin" constant="15" id="iMs-bT-qzi"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="PcY-O1-CfA" secondAttribute="trailing" id="te4-Ve-mfn"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <connections>
                                             <outlet property="labelAuthor" destination="PcY-O1-CfA" id="9cR-XF-d3H"/>
                                             <outlet property="labelTitle" destination="niV-7C-1bD" id="r7v-JE-uil"/>
@@ -99,7 +100,7 @@
                             </tableView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="0jW-6j-JCd" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" constant="15" id="7YL-Ui-BHb"/>
+                            <constraint firstItem="0jW-6j-JCd" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" id="7YL-Ui-BHb"/>
                             <constraint firstItem="Xud-YF-Dyu" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="wxa-zN-uMr" secondAttribute="trailing" constant="8" id="ESp-dh-CQq"/>
                             <constraint firstItem="Xud-YF-Dyu" firstAttribute="centerY" secondItem="g5g-QO-P5K" secondAttribute="centerY" id="FWK-VN-ch0"/>
                             <constraint firstAttribute="trailing" secondItem="0jW-6j-JCd" secondAttribute="trailing" id="GVU-Ew-0V3"/>
